[package]
name = "shovel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
mongodb = { version = "2.3.1" }
reqwest = { version = "0.11.13" }
dotenv = "0.15.0"
serde = "1.0.152"
thiserror = "1.0.38"
async-trait = "0.1.61"
url = "2.3.1"
color-eyre = "0.6.2"
serde_json = "1.0.91"
